# rs_algo_shared

./: Cargo.toml  README.md
src/: chart.rs  error.rs  lib.rs  models.rs
src/broker/: crypto.rs  forex.rs  mod.rs  models.rs  xtb.rs  xtb_stream.rs
src/helpers/: calc.rs  comp.rs  date.rs  http.rs  maxima_minima.rs  mod.rs  regression.rs  slope_intercept.rs  status.rs  trend.rs  uuid.rs  websocket.rs
src/helpers/symbols/: crypto.rs  forex.rs  mod.rs  sp500.rs
src/indicators/: adx.rs  atr.rs  bb.rs  bbw.rs  dmi.rs  ema.rs  kc.rs  macd.rs  mfi.rs  mod.rs  rsi.rs  sd.rs  stoch.rs
src/models/: api.rs  backtest_instrument.rs  backtest_strategy.rs  bot.rs  candle.rs  divergence.rs  environment.rs  horizontal_level.rs  indicator.rs  instrument.rs  market.rs  mod.rs  mode.rs  order.rs  pattern.rs  peak.rs  pricing.rs  status.rs  stop_loss.rs  strategy.rs  swap.rs  tick.rs  time_frame.rs  trade.rs  watch_instrument.rs
src/patterns/: broadening.rs  channel.rs  divergences.rs  double.rs  head_shoulders.rs  highs_lows.rs  horizontal_levels.rs  mod.rs  pattern.rs  peaks.rs  rectangle.rs  smc.rs  triangle.rs
src/scanner/: candle.rs  divergence.rs  horizontal_level.rs  indicator.rs  instrument.rs  mod.rs  pattern.rs  peak.rs  prices.rs
src/ws/: message.rs  mod.rs  ws_client.rs  ws_stream_client.rs
