[package]
name = "rs_algo_shared"
version = "0.1.1"
authors = ["pmagaz <magazpablo@gmail.com>"]
edition = "2021"

[lib]
name = "rs_algo_shared"
path = "src/lib.rs"

[features]
default = []
chart = ["plotters"]


[dependencies]
anyhow = "1.0.57"
thiserror = "1.0.30"
dotenv = "0.15.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_qs = "0.9.1"
bson = { version = "2.2.0", features = ["chrono-0_4"]} 
reqwest = { version = "0.11.10", features = ["json"] }
ta = {version = "0.5.0", features = ["serde"] }
chrono = {version = "0.4.19",  features = ["serde","wasmbind", "js-sys"]}

[dependencies.plotters]
optional = true
git = "https://github.com/pmagaz/plotters"
branch = "master"
features = ["all_series"]
