[package]
name = "rs_algo_shared"
version = "0.1.1"
authors = ["pmagaz <magazpablo@gmail.com>"]
edition = "2021"

[lib]
name = "rs_algo_shared"
path = "src/lib.rs"

[features]
default = []
chart = ["plotters"]
broker = ["tungstenite","openssl","tokio"]

[dependencies]
async-trait = "0.1.52"
anyhow = "1.0.58"
thiserror = "1.0.31"
dotenv = "0.15.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
serde_qs = "0.10.1"
bson = { version = "2.2.0", features = ["chrono-0_4"]} 
reqwest = { version = "0.11.11", features = ["json"] }
chrono = {version = "0.4.19",  features = ["serde","wasmbind", "js-sys"]}
round = "0.1.2"

ta = {git = "https://github.com/pmagaz/ta-rs", features = ["serde"], rev="3b2d78c"}

[dependencies.plotters]
optional = true
git = "https://github.com/pmagaz/plotters"
branch = "master"
features = ["all_series"]

[dependencies.tungstenite]
optional = true
version = "0.17.2"
features = ["native-tls"]

[dependencies.openssl]
optional = true
version = "0.10.38"
features = ["vendored"]

[dependencies.tokio]
optional = true
version = "1.19.1"
features = ["rt-multi-thread", "macros"] 

