[package]
name = "rs_algo_shared"
version = "0.1.1"
authors = ["pmagaz <magazpablo@gmail.com>"]
edition = "2021"

[lib]
name = "rs_algo_shared"
path = "src/lib.rs"

[features]
default = []
chart = ["plotters"]
broker = ["tungstenite","tokio-tungstenite","futures-util","openssl","tokio"]
websocket = ["tungstenite","tokio","futures-util"]
#instrument = ["find_peaks","polyfit-rs"]

[dependencies]
async-trait = "0.1.52"
dyn-clone = "1.0.8"
anyhow = "1.0.58"
thiserror = "1.0.31"
dotenv = "0.15.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
serde_qs = "0.12.0"
bson = { version = "2.2.0", features = ["chrono-0_4"]} 
reqwest = { version = "0.11.22", features = ["json"] }
chrono = {version = "0.4.19",  features = ["serde","wasmbind", "js-sys"]}
round = "0.1.2"
env_logger = "0.10.0"
log = "0.4"
regex = "1.7.2"

[dependencies.plotters]
optional = true
git = "https://github.com/pmagaz/plotters"
branch = "master"
features = ["all_series"]

[dependencies.futures-util]
optional = true
version = "0.3.17"
default-features = false
features = ["std"]

[dependencies.tungstenite]
optional = true
version = "0.18.0"
features = ["native-tls"]

[dependencies.tokio-tungstenite]
optional = true
version = "0.18.0"
features = ["native-tls"]

[dependencies.openssl]
optional = true
version = "0.10.38"
features = ["vendored"]

[dependencies.tokio]
optional = true
version = "1.19.1"
features = ["rt-multi-thread", "macros"] 

[dependencies.find_peaks]
optional = false
version = "0.1.5"

[dependencies.polyfit-rs]
optional = false
version = "0.2.0"

[dependencies.ta]
optional = false
git = "https://github.com/pmagaz/ta-rs"
branch = "master"
features = ["serde"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = true
lto = true
